# rust-htmx-template

./: .gitignore  Cargo.toml  Justfile  README.md  bacon.toml  diesel.toml  shell.nix  tailwind.config.js
migrations/: V0__table_todos_create.sql
src/: auth.rs  db.rs  err.rs  handlers.rs  main.rs  schema.rs  static.rs  templates.rs  views.rs
static/: styles.css  surreal.js
styles/: input.css
templates/: base.html  home.html  login.html  login_success.html  todo_row.html  todo_row_editing.html  unimplemented.html
