[package]
name = "harm-stack-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum", "axum-core"] }
snafu = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = "0.9.6"
uuid = { version = "1.13.1", features = ["v4"] }
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
axum-login = "0.17.0"
async-trait = "0.1.86"
