[package]
name = "rust-htmx-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
snafu = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-livereload = "0.9.6"
uuid = { version = "1.13.1", features = ["v4"] }
serde = "1.0.217"
serde_json = "1.0.138"
axum-login = "0.17.0"
async-trait = "0.1.86"
askama = "0.15.6"
askama_web = { version = "0.15.2", features = ["axum-0.8"] }
refinery = { version = "0.9.0", features = ["rusqlite"] }
rusqlite = "0.37"
sea-query = "1.0.0-rc.31"
sea-query-rusqlite = "0.8.0-rc.15"
serde_rusqlite = "0.40.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.11.0" }
mime_guess = "2.0.5"
